name: RocketFlyingGame
version: 1.0
cabal-version: 1.11
build-type: Simple
license: MIT
license-file: LICENSE.md
copyright: 2017 Applicative
stability: experimental
synopsis: Rocket Flying Game
category: Games
author: Mieszko Makuch
data-files:
    Saw.png
    stone1.png
    Rocket-03-T.png
    spaceBG.jpg
    Rocket-01-T.png
    stone2.png
    Rocket-02-T.png
x-ghc-framework-version: 7.10.3-5.9-2
x-last-ide-version: HfM1.3.0
Executable RocketFlyingGame
  main-is: Main.hs
  buildable: True
  build-depends:
      base -any,
      QuickCheck -any,
      spritekit -any,
      HUnit -any,
      random -any
  other-modules:
      Scenery
      HUnitTests
      GameState
      HelperFunctions
      Actions
      DefinedConstants
      Obstacles
